--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,3 +1,8 @@
 item.lca:claim_shovel=Claim Shovel
 item.spawn_egg.entity.lca:first_point.name=Spawn First Land Selection Point
 entity.lca:first_point.name=First Land Selection Point
+
+chat.prefix=[§eLCA§r]
+chat.claim:name_required=§cYou must provide a name!§r
+chat.claim:use_unique_name=§cYou can't use the name of an existing claim!§r
+chat.claim:created=§aClaim created!
