--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -5,4 +5,28 @@ entity.lca:first_point.name=First Land Selection Point
 chat.prefix=[§eLCA§r]
 chat.claim:name_required=§cYou must provide a name!§r
 chat.claim:use_unique_name=§cYou can't use the name of an existing claim!§r
-chat.claim:created=§aClaim created!
+chat.claim:created=§aClaim created!§r
+chat.claim:renamed=§aClaim renamed!§r
+chat.claim:deleted=§cClaim deleted.§r
+
+ui:back_button=<= Back
+
+ui.main:title=Land Claim Menu
+ui.main:manage_claims_button=Manage Claims
+
+ui.manage:title=Manage Claim
+
+ui.manage.public_permissions_button=Public Permissions
+ui.manage.whitelist_button=Whitelist
+ui.manage.rename_button=Rename
+ui.manage.delete_claim_button=§cSell Claim§r
+
+ui.manage.delete:body=Are you sure you want to sell this claim? This action cannot be undone.
+ui.manage.delete:confirm_button=§cSell Claim§r
+ui.manage.delete:cancel_button=Cancel
+
+ui.claim.new:title=New Claim
+
+ui.claim:public_toggle=Public Access
+ui.claim:name=Name
+ui.claim:name_placeholder=Ex: Home
