--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -28,6 +28,7 @@ chat.claim.permission:break_blocks=§cYou're not allowed to break blocks!§r
 chat.claim.permission:use_item_on_block=§cYou're not allowed to use items on blocks!§r
 chat.claim.permission:use_tnt=§cYou're not allowed to use tnt!§r
 chat.claim.permission:hurt_entities=§cYou're not allowed to use this item!§r
+chat.claim.permission:enter_claim=§cYou're not allowed to enter this claim!§r
 chat.claim:view=§cYou can only view a claim from the overworld!§r
 chat.claim:piston=§cYou can't use a piston from outside this claim!§r
 
